# parqsee

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
backend/: Cargo.toml  tauri.conf.json
backend/icons/: icon.icns
backend/src/: lib.rs  main.rs
backend/src/commands/: data.rs  file.rs  mod.rs  query.rs
backend/src/models/: mod.rs
backend/src/services/: export.rs  mod.rs  parquet.rs
backend/src/utils/: mod.rs
docs/: ASSETS.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: index.tsx  provider.tsx  router.tsx
frontend/src/contexts/: RecentFilesContext.tsx  SettingsContext.tsx  WorkspaceContext.tsx
frontend/src/features/file-explorer/: index.ts
frontend/src/features/file-explorer/api/: index.ts
frontend/src/features/file-viewer/: index.ts
frontend/src/features/layout/: index.ts
frontend/src/features/query/: types.ts
frontend/src/features/settings/: index.ts
frontend/src/features/welcome/: index.ts
frontend/src/features/workspace/: index.ts
frontend/src/lib/: i18n.ts  path.ts  tauri.ts
frontend/src/locales/: en.json  ja.json
scripts/: apply_squircle.py
src/: App.tsx  global.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: DataViewer.tsx  ExportModal.tsx  FileExplorer.tsx  SearchBar.tsx  SettingsModal.tsx  TabBar.tsx  TabContent.tsx
src/contexts/: RecentFilesContext.tsx  SettingsContext.tsx
(+21 files in other folders)
