[package]
name = "parqsee"
version = "0.1.0"
description = "A fast and simple Parquet file viewer for macOS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "parqsee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = "52.0.0"
arrow = "52.0.0"
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2.4.1"
chrono = "=0.4.38"
csv = "1.3"
tauri-plugin-notification = "2"
comfy-table = "=7.0.1"
datafusion = { version = "40.0.0", default-features = false, features = ["parquet"] }

